Tagit bort en mening på logout.html och fixat overflow-problem på vissa sidor.

--- a/CSS/booking.css
+++ b/CSS/booking.css
@@ -373,6 +373,12 @@ main a:hover .fa-xmark {
     z-index: -1;
 }
 
+/* Container för alla boknings-rutor. */
+
+.booking-container {
+    overflow-x: hidden;
+}
+
 /* Olika bokningsfält. */
 .adress,
 .date,
