--- a/CSS/home.css
+++ b/CSS/home.css
@@ -347,7 +347,7 @@ main a:hover .fa-caret-right {
 /* MAIN. */
 
 /* Bakgrundsbild, container. */
-.nuts-container {
+.background-img-container {
     position: relative;
     background-image: url("../Assets/nuts.png");
     background-repeat: no-repeat;
